konst/tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.stderr
error: unexpected end of macro invocation
 --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:1:15
  |
1 | const _: () = konst::iter::for_each!{};
  |               ^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$pattern:pat`
 --> src/iter/for_each_macro.rs
  |
  |         $pattern:pat in $iterator:expr
  |         ^^^^^^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:3:39
  |
3 | const _: () = konst::iter::for_each!{_};
  |                                       ^ missing tokens in macro arguments
  |
note: while trying to match keyword `in`
 --> src/iter/for_each_macro.rs
  |
  |         $pattern:pat in $iterator:expr
  |                      ^^

error: unexpected end of macro invocation
 --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:5:42
  |
5 | const _: () = konst::iter::for_each!{_ in};
  |                                          ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$iterator:expr`
 --> src/iter/for_each_macro.rs
  |
  |         $pattern:pat in $iterator:expr
  |                         ^^^^^^^^^^^^^^

error: method `foobar` is unsupported, expected one of:
       - map
       - enumerate
       - copied
       - skip
       - skip_while
       - take
       - take_while
       - step_by
       - filter
       - filter_map
       - zip
       - rev
       - flatten
       - flat_map
       - find
       - rfind
       - find_map
       - position
       - all
       - any
       - nth
       - next
       - count
       - for_each
       - fold
       - rfold
       - cmp
       - eq
       - ne
       - ge
       - gt
       - le
       - lt
       - is_sorted
       - is_sorted_by
       - is_sorted_by_key
       - max
       - min
       - max_by
       - min_by
       - max_by_key
       - min_by_key
 --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:8:13
  |
8 |     let _ = konst::iter::for_each!{_ in 0..10,foobar() => };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Cannot consume the iterator multiple times, first consumed by `all` method
  --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:12:13
   |
12 |     let _ = konst::iter::for_each!{_ in 0..10,all(|_|false) => };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Cannot consume the iterator multiple times, first consumed by `find` method
  --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:13:13
   |
13 |     let _ = konst::iter::for_each!{_ in 0..10,find(|_|false) => };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Cannot consume the iterator multiple times, first consumed by `count` method
  --> tests/misc_tests/iter_mod_ui_tests/for_each_syntax_err.rs:14:13
   |
14 |     let _ = konst::iter::for_each!{_ in 0..10,count() => };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::for_each` (in Nightly builds, run with -Z macro-backtrace for more info)
